# tycho-orderbook-web

./: .gitmodules  LICENSE  README.md  docker-compose.yaml  launch.sh  run.sh  update.sh
.github/workflows/: staging-deployment.yaml
.helm/tycho-orderbook-stream/: Chart.yaml  values.yaml
.helm/tycho-orderbook-stream/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  external-secrets.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
back/: .env.ex  .gitignore  CLAUDE.md  Cargo.toml  clean.fmt.sh
back/.cargo/: config.toml
back/ops/: Dockerfile  api.test.sh  local.api.start.sh  local.api.test.sh  local.quick.start.sh  networks.json
back/ops/prev/: docker-compose.yaml
back/src/: axum.rs  stream.rs
back/src/shared/: data.rs  getters.rs  helpers.rs  lib.rs  misc.rs  types.rs
