[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
tycho-orderbook = "0.1.0" # { path = "../../tycho-orderbook-sdk" }
tycho-simulation = "0.91.1" # Patched below

utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
chrono = "0.4.23"
futures = "0.3.31"
num-bigint = "0.4.6"
tokio = { version = "1.28", features = ["full"] }
toml = "0.8.12"
serde = { version = "1.0.104", features = ["derive"] }
clippy = "0.0.302"
env_logger = "0.11.3"
eyre = "0.6.11"
url = "2.5.0"
anyhow = "1.0"
hex-literal = "0.4"
hex = "0.4.3"
bytes = "1.4.0"
fern = { version = "0.6.2", features = ["colored"] }
colored = "2.0.0"
rand = "0.8.5"
serde_json = "1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = "0.12.4"
redis = { version = "0.26.1", features = ["tokio-comp"] }
alloy = { version = "0.3.1", features = ["full", "node-bindings", "json-rpc", "rpc-client", "providers", "signer-local", "rpc-types-eth"] }
num-traits = "0.2.19"
alloy-chains = "0.1.63"
axum = { version = "0.8.1", features = ["macros"] }
primitive-types = "0.10.1"
indicatif = "0.17.11"
alloy-primitives = "0.8.23"
axum-macros = "0.5.0"
rayon = "1.10.0"
async-trait = "0.1.88"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[patch.crates-io]
tycho-simulation = { git = "https://github.com/0xMerso/tycho-simulation.git", branch = "main" }

# ======================================================================================================================================================================================================
[lib]
name = "shared"
path = "src/shared/lib.rs"

[[bin]]
name = "stream"
path = "src/stream.rs"

# ======================================================================================================================================================================================================