[package]
name = "back"
version = "0.1.0"
edition = "2021"

description = "Rust Axum API used to transpose onchain liquidity from AMMs into a orderbook with Tycho"
license = "MIT" 
readme = "README.md"
keywords = [ "dex", "mev", "blockchain", "ethereum", "orderbook", "tycho", "defi", "amm", "cex", "binance", "liquidity", "swap", "crypto", "solver"]
categories = ["finance", "cryptography::cryptocurrencies"]
authors = ["Merso merso.eth@gmail.com"] 
documentation = "https://tycho-orderbook.gitbook.io/docs"

[dependencies]
tycho-orderbook = { version = "0.1.0", path = "../sdk" } # Default, expected when launch with Docker Compose
# tycho-orderbook = { path = "../../tycho-orderbook-sdk" } # Adjust according to where you clone the sdk repo
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", rev = "2ef64b9bcc20de865303efceb3a5d245c34b32c0" }

utoipa = "5.3.1"
utoipa-axum = "0.2.0"
# utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "reqwest"] }
chrono = "0.4.23"
futures = "0.3.31"
num-bigint = "0.4.6"
tokio = { version = "1.28", features = ["full", "tracing"] }
toml = "0.8.12"
serde = { version = "1.0.104", features = ["derive"] }
env_logger = "0.11.3"
eyre = "0.6.11"
url = "2.5.0"
anyhow = "1.0"
hex-literal = "0.4"
hex = "0.4.3"
bytes = "1.4.0"
fern = { version = "0.6.2", features = ["colored"] }
colored = "2.0.0"
rand = "0.8.5"
serde_json = "1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = "0.12.4"
redis = { version = "0.26.1", features = ["tokio-comp"] }
alloy = { version = "0.3.1", features = ["full", "node-bindings", "json-rpc", "rpc-client", "providers", "signer-local", "rpc-types-eth"] }
num-traits = "0.2.19"
alloy-chains = "0.1.63"
axum = { version = "0.8.1", features = ["macros"] }
primitive-types = "0.10.1"
indicatif = "0.17.11"
alloy-primitives = "0.8.23"
axum-macros = "0.5.0"
rayon = "1.10.0"
async-trait = "0.1.88"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
console-subscriber = "0.4.1"

# Misc to trigger redeploy

# ======================================================================================================================================================================================================

[lib]
name = "shared"
path = "src/shared/lib.rs"

[[bin]]
name = "stream"
path = "src/stream.rs"
